unpackaged/main/default/objects/Activity/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Created to use it on Home page on My Assigned Tasks or My Delegated tasks widget</description>
    <formula>IF(Account.Id != null, Account.Name,Related_Account_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>