unpackaged/main/default/objects/Activity/fields/Any_issues_with_AC_HEAT__c.field-meta.xml
<CustomField>
    <fullName>Any_issues_with_AC_HEAT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm there are no issues with AC/Heat and review contingency plan for the drive and donors in case of delay, weather or issues that arise. Remind BPL to provide Emergency Action Plan protocols to charge day of drive.</inlineHelpText>
    <label>Any issues with AC/HEAT ?</label>
    <type>Checkbox</type>
</CustomField>