unpackaged/main/default/objects/Activity/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <description>DM can select Yes or No based on Criteria to Approved the Process</description>
    <label>Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>