unpackaged/main/default/objects/Activity/fields/Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_By__c</fullName>
    <description>If DM approved request then this field will be auto populated by the approver/rejecter.</description>
    <label>Approved/Rejected By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>