unpackaged/main/default/objects/Activity/fields/Are_appointments_entered_in_BDM_portal__c.field-meta.xml
<CustomField>
    <fullName>Are_appointments_entered_in_BDM_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the appointments entered in our Blood Drive Management Portal? DRD will need to enter the donor information to convert offline appointments to the online appointment schedule.</inlineHelpText>
    <label>Are appointments entered in BDM portal</label>
    <type>Checkbox</type>
</CustomField>