unpackaged/main/default/objects/Activity/fields/Are_volunteers_scheduled_for_greetings__c.field-meta.xml
<CustomField>
    <fullName>Are_volunteers_scheduled_for_greetings__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are volunteers scheduled for the greeting/registration and canteen?  Is there unloading and loading help?  Review with Sponsor any volunteers, and their names, that will be provided by the American Red Cross.</inlineHelpText>
    <label>Are volunteers scheduled for greetings?</label>
    <type>Checkbox</type>
</CustomField>