unpackaged/main/default/objects/Activity/fields/Clone_blood_drive_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Clone_blood_drive_opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clone blood drive opportunity?</label>
    <type>Checkbox</type>
</CustomField>