unpackaged/main/default/objects/Activity/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <formula>CompletedDateTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>