unpackaged/main/default/objects/Activity/fields/Date_of_Sponsor_Planning_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sponsor_Planning_Meeting__c</fullName>
    <label>Date of Sponsor Planning Meeting</label>
    <type>Date</type>
</CustomField>