unpackaged/main/default/objects/Activity/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>