unpackaged/main/default/objects/Activity/fields/Is_Room_unlocked_lights_good__c.field-meta.xml
<CustomField>
    <fullName>Is_Room_unlocked_lights_good__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Who will meet our staff to ensure room is unlocked, lights and room temperature are good and the room has been cleared apart from the number of tables and chairs needed for the blood drive? Ask them to provide the security and safety protocols.</inlineHelpText>
    <label>Is Room unlocked, lights good?</label>
    <type>Checkbox</type>
</CustomField>