unpackaged/main/default/objects/Activity/fields/Notify_staff_of_any_known_roadblocks__c.field-meta.xml
<CustomField>
    <fullName>Notify_staff_of_any_known_roadblocks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there any construction or changes to the blood drive location that could delay our staff’s arrival or ability to set up on time? Notify staff of any known road condition or roadblocks and provide an alternative route, if necessary.</inlineHelpText>
    <label>Notify staff of any known roadblocks</label>
    <type>Checkbox</type>
</CustomField>