unpackaged/main/default/objects/Activity/fields/number_of_Units_Booked__c.field-meta.xml
<CustomField>
    <fullName>number_of_Units_Booked__c</fullName>
    <description>This will record the number of units booked</description>
    <label>Number of Units Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>