unpackaged/main/default/objects/Activity/fields/Pre_Drive_Security_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Drive_Security_Due_Date__c</fullName>
    <description>this is to be filled based on task creation for pre drive</description>
    <label>Pre-Drive Security Due Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>