unpackaged/main/default/objects/Activity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>This field will auto populate with reason given by AM when request for marketing exception to DM</description>
    <label>Reason</label>
    <length>30</length>
    <type>Text</type>
</CustomField>