unpackaged/main/default/objects/Activity/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <description>If DM reject any request for marketing exception then this field should be filled with a valid reason.</description>
    <label>Reason for Rejection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>