unpackaged/main/default/objects/Activity/fields/Related_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Id__c</fullName>
    <description>This will be populated using TaskTriggerHandler when Task is created on skedulo drive object Created to use it on Home page on My Assigned Tasks or My Delegated tasks widget</description>
    <label>Related Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>