unpackaged/main/default/objects/Activity/fields/Related_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Name__c</fullName>
    <description>this will be populated from Task Trigger. Created to use it on Home page on My Assigned Tasks or My Delegated tasks widget</description>
    <label>Related Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>