unpackaged/main/default/objects/Activity/fields/Related_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Name__c</fullName>
    <description>It contains the name of the record on which the task is created . Name of the record that is on WhatId of the Task.Created to use it on Home page on My Assigned Tasks or My Delegated tasks widget</description>
    <label>Related Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>