unpackaged/main/default/objects/Activity/fields/Review_blood_drive_goal_with_sponser__c.field-meta.xml
<CustomField>
    <fullName>Review_blood_drive_goal_with_sponser__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Review the blood drive appointment goal with sponsor.If schedule is not full, discuss further recruitment strategiesor reference the contingency worksheet.Discuss plan to remind donors of their appointments.</inlineHelpText>
    <label>Review blood drive goal with sponser</label>
    <type>Checkbox</type>
</CustomField>