unpackaged/main/default/objects/Activity/fields/Review_number_of_scheduled_appointments__c.field-meta.xml
<CustomField>
    <fullName>Review_number_of_scheduled_appointments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Review number of scheduled appointments for whole blood, Type O and Power Red, discuss opportunity to convert whole blood donations to Power Red.</inlineHelpText>
    <label>Review number of scheduled appointments</label>
    <type>Checkbox</type>
</CustomField>