unpackaged/main/default/objects/Activity/fields/Security_list_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Security_list_Recipient_Email__c</fullName>
    <label>Security list Recipient Email</label>
    <type>Email</type>
</CustomField>