unpackaged/main/default/objects/Activity/fields/Send_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If AM initiate any request to DM for sending emails then this field will be populated as true</description>
    <label>Send Emails</label>
    <type>Checkbox</type>
</CustomField>