unpackaged/main/default/objects/Activity/fields/Task_Source__c.field-meta.xml
<CustomField>
    <fullName>Task_Source__c</fullName>
    <formula>IF( Contains(WhatId,&#39;006&#39;),&#39;Blood Drive&#39;,IF(Contains(WhatId,&#39;001&#39;),&#39;Account&#39;,

IF(Contains(WhatId,&#39;a1Z&#39;),&#39;Drive&#39;,IF(Contains(WhatId,&#39;003&#39;),&#39;Contact&#39;,&#39;N/A&#39;))

) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Source</label>
    <type>Text</type>
</CustomField>